# omnip_project

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
dbt/: profiles.yml
dbt/macros/: repair_tables.sql
dbt/models/1_bronze/: sources.yml  stg_nbu_rates.sql
dbt/models/2_silver/: fct_currency_rates.sql
dbt/models/3_gold/: fct_currency_growth.sql  fct_monthly_currency_avg.sql  schema.yml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/: sources.yml
dbt_project/models/1_bronze/: _nbu__sources.yml
dbt_project/models/2_silver/: stg_nbu_rates.sql
dbt_project/models/3_gold/: fct_currency_growth.sql  fct_monthly_currency_avg.sql  schema.yml
src/: backfill_nbu.py  ingest_nbu_rates.py  main.py
terraform/: .terraform.lock.hcl  db_connection_test.py  main.tf  terraform.tfstate.1771952611.backup  variables.tf
