[project]
name = "omnip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awswrangler>=3.15.0",
    "boto3>=1.42.54",
    "dbt-athena-community>=1.10.0",
    "dbt-core>=1.11.6",
    "dbt-redshift>=1.10.1",
    "pandas<3.0.0",
    "pyarrow<23.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
